--- a/src/App.css
+++ b/src/App.css
@@ -1,54 +1,27 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
 
 /*BODY de la página*/
 .layout{
-  width: 85%;
-  margin: 0 auto;
+  font-size: auto;
+  width: 100%;
+ 
+  display: grid;
+
+  grid-template-areas: 
+  "navegador" 
+  "contenido" 
+  "footer";
+  
 }
 /*HEADER de la Página*/
 .header{
-  display: flex;
-  height: 132px;
-  justify-content: center;
-  align-items: center;
-  list-style: none;
+  grid-area: navegador;
+  width: auto;
+  
+  display: grid;
+  grid-template-areas: "log ul ul ul";
+  height: auto;
 
   border-bottom: 2px solid black;
   margin-bottom: 35px;
@@ -56,13 +29,16 @@
 
 
 .header nav{
-  flex: 1;
+  
+  
+  
 }
 
 .header .logo{
-  flex-grow: 2;
+  grid-area: log;
   display: flex;
   transition: all 300ms;
+  
    
 }
 
@@ -95,6 +71,9 @@
 }
 
 .header nav ul{
+  grid-area: ul;
+ 
+
   height: 132px;
   display: flex;
   justify-content: flex-end;
@@ -120,7 +99,6 @@
   color: #fa4529;
 }
 
-
 .not_nav_activado{
     color: #000000;
 }
@@ -143,9 +121,10 @@
 /*INICIO*/
 
 .content{
-  
+  grid-area: contenido;
   min-height: 100vh;
   padding: 25px;
+  
  
 }
 .content .parrafo{
@@ -435,7 +414,8 @@ width: 500px;
 }
 /*Footer*/
 
-footer{
+.footer{
+  grid-area: footer;
   text-align: center;
   font-size: 14px;
   line-height: 100px;
@@ -446,4 +426,18 @@ footer{
   padding-bottom: 10px;
 
   color: #4444;
+  width: 100%;
+}
+
+@media screen and (max-width:900px) {
+  .work-item{
+
+    flex-basis: 100%;
+
+  }
+
+  .work-item .mask{
+    height: 300px;
+  }
+  
 }
